<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASCIITTY</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonEdit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewEditTitle">Edit your creation</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSave">Save</string>
    <string name="buttonAdd">Add New</string>
    <string name="editTextDefaultName">Enter a name</string>
    <string name="editTextDefaultCreation">Create your masterpiece here</string>
    <string name="deleteMessage">Delete Art?</string>
    <string name="dialogDelete">Delete</string>
    <string name="dialogCancel">Cancel</string>
    <string name="deleteTitle">Delete</string>
    <string name="fast_input_label">fast input</string>

</resources>
