<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zano.asciitty.app.AsciiEditorFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEditTitle"
        android:id="@+id/textViewEditorName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:background="#eee"
        android:layout_marginBottom="6dp"
        android:textColor="#000"
        android:hint="@string/editTextDefaultName"
        android:layout_margin="4dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="1"
        android:background="#eee"
        android:typeface="monospace"
        android:clickable="true"
        android:textColor="#000"
        android:gravity="top"
        android:singleLine="false"
        android:hint="@string/editTextDefaultCreation"
        android:layout_margin="4dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:id="@+id/buttonCancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSave"
            android:id="@+id/buttonSave"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
